--- a/order-summary-component-main/styles.css
+++ b/order-summary-component-main/styles.css
@@ -1,75 +1,59 @@
 @import URL(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css);
 @import url(https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@1,500;1,700;1,900&display=swap);
 
-.attribution {
-  font-size: 11px;
-  text-align: center;
+body,
+html {
+  height: 100%;
 }
 
-.attribution a {
-  color: hsl(228, 45%, 44%);
+#cancel:hover {
+  cursor: pointer;
 }
 body {
   background-color: hsl(225, 100%, 94%);
   font-family: Red Hat Display;
-  padding: 20px;
-  margin: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-section {
-  background-color: white;
-  border-radius: 10px;
-  width: 260px;
-  margin: 0px;
-  overflow: hidden;
-}
-
 img {
   background-color: hsl(216, 50%, 16%);
-  width: 260px;
+  height: 140px;
   cursor: pointer;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  margin: 0px;
-  padding: left;
 }
+
 h1 {
-  border-top: 40px;
-  text-align: center;
   font-size: 20px;
 }
+
+.illustration {
+  background-color: white;
+  border-radius: 10px;
+  width: 300px;
+  height: 450px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
 .illustration p {
   font-size: 14px;
-  display: flex;
   color: gray;
-  text-align: center;
-  width: 250px;
-  justify-content: center;
-  margin: 0px;
 }
-.button button {
+
+button {
+  color: gray;
   background-color: hsl(245, 75%, 52%);
   color: white;
-  width: 200px;
-  text-align: center;
-  margin: 10px;
+  width: 100%;
   border: 100px;
   border-radius: 8px;
   height: 40px;
-  justify-content: center;
-  margin-left: 25px;
   cursor: pointer;
 }
 button:hover {
   background-color: #7b68ee;
-}
-.button {
-  text-align: center;
-  color: gray;
 }
 
 .fa-solid {
@@ -79,22 +63,51 @@ button:hover {
   padding: 10px;
   margin: 0px;
   height: 15px;
-  justify-content: flex-end;
 }
 .attribution {
-  width: 250px;
   align-items: center;
   margin: 0px;
-  font-size: 11px;
+  flex-direction: column;
   justify-content: space-between;
   display: flex;
   border-radius: 10px;
-  height: 60px;
   background-color: hsl(225, 100%, 98%);
+  padding: 25px;
+  height: 100%;
+  font-size: 11px;
 }
 .attribution h4 {
   cursor: pointer;
 }
 .attribution h4:hover {
   color: #7b68ee;
+}
+.plan h1,
+.plan p {
+  margin: 0px;
+}
+.svetlio {
+  background-color: lightgray;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.attribution h1,
+.attribution p {
+  margin: 0;
+  text-align: center;
+}
+.plan {
+  display: flex;
+  align-items: center;
+}
+.price p {
+  text-align: left;
+}
+.price {
+  margin-left: 5px;
 }
